# DWT-module

./: configure.ac
src/: Makefile.am  weightedt.cc
src/distributions/: DWT1.cc  DWT2.cc  Makefile.am
src/functions/: LogWeightedtFun.cc  Makefile.am
